fix: mapper type error