@@ -1,6 +1,7 @@
 package com.gmoon.resourceserver.config;
 
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.springframework.cache.Cache;
@@ -27,6 +28,6 @@ public class CacheConfig {
 		return Stream.of(CacheName.values())
 			 .map(CacheName::getValue)
 			 .map(ConcurrentMapCache::new)
-			 .toList();
+			 .collect(Collectors.toList());
 	}
 }
